--- a/aws/codepipeline.yml
+++ b/aws/codepipeline.yml
@@ -1,79 +1,133 @@
-AppPipeline: 
-  Type: AWS::CodePipeline::Pipeline 
-  Properties: 
-    RoleArn:
-      Ref: CodePipelineServiceRole 
-    Stages: 
-      - 
-        Name: Source 
-        Actions: 
-          - 
-            Name: SourceAction
-            ActionTypeId: 
-              Category: Source 
-              Owner: AWS 
-              Version: 1 
-              Provider: S3 
-            OutputArtifacts: 
-              - 
-                Name: SourceOutput 
-            Configuration: 
-              S3Bucket: 
-                Ref: SourceS3Bucket 
-              S3ObjectKey: 
-                Ref: SourceS3ObjectKey 
-            RunOrder: 1 
-      - 
-        Name: Beta 
-        Actions: 
-          - 
-            Name: BetaAction 
-            InputArtifacts: 
-              -
-                Name: SourceOutput 
-            ActionTypeId: 
-              Category: Deploy 
-              Owner: AWS 
-              Version: 1 
-              Provider: CodeDeploy
-            Configuration: 
-              ApplicationName: 
-                Ref: ApplicationName 
-              DeploymentGroupName: 
-                Ref: DeploymentGroupName 
-            RunOrder: 1 
-      - 
-        Name: Release 
-        Actions: 
-          - 
-            Name: ReleaseAction
-            InputArtifacts: 
-              - 
-                Name: SourceOutput 
-            ActionTypeId: 
-              Category: Deploy 
-              Owner: AWS 
-              Version: 1
-              Provider: CodeDeploy 
-            Configuration: 
-              ApplicationName: 
-                Ref: ApplicationName
-              DeploymentGroupName: 
-                Ref: DeploymentGroupName 
-            RunOrder: 1 
-    ArtifactStore: 
-      Type: S3 
-      Location:
-        Ref: ArtifactStoreS3Location 
-      EncryptionKey:
-        Id: arn:aws:kms:useast-1:ACCOUNT-ID:key/KEY-ID
-        Type: KMS
-    DisableInboundStageTransitions: 
-      - 
-        StageName: Release 
-        Reason: "Disabling the transition until integration tests are completed"
-    Tags:
-      - Key: Project
-        Value: ProjectA
-      - Key: IsContainerBased
-        Value: 'true'
+Parameters:
+  BranchName:
+    Description: CodeCommit branch name
+    Type: String
+    Default: main
+  RepositoryName:
+    Description: CodeCommit repository name
+    Type: String
+    Default: AWSfoodAgg
+  ApplicationName:
+    Description: CodeDeploy application name
+    Type: String
+    Default: DemoApplication
+  BetaFleet:
+    Description: Fleet configured in CodeDeploy
+    Type: String
+    Default: DemoFleet
+  CodePipelineArtifactStoreBucket:
+    Description: BucketToStore
+    Type: String
+    Default: cdk-hnb659fds-assets-571397504118-eu-west-1
+    
+Resources:
+  AppPipeline:
+    Type: AWS::CodePipeline::Pipeline
+    Properties:
+      Name: awsfoodagg-codepipeline2
+      RoleArn: !GetAtt 
+        - CodePipelineServiceRole
+        - Arn
+      Stages:
+        - Name: Source
+          Actions:
+            - Name: SourceAction
+              ActionTypeId:
+                Category: Source
+                Owner: AWS
+                Version: 1
+                Provider: CodeCommit
+              OutputArtifacts:
+                - Name: SourceOutput
+              Configuration:
+                BranchName: !Ref BranchName
+                RepositoryName: !Ref RepositoryName
+                PollForSourceChanges: false
+              RunOrder: 1
+        - Name: Beta
+          Actions:
+            - Name: BetaAction
+              InputArtifacts:
+                - Name: SourceOutput
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Version: 1
+                Provider: CodeDeploy
+              Configuration:
+                ApplicationName: !Ref ApplicationName
+                DeploymentGroupName: !Ref BetaFleet
+              RunOrder: 1
+      ArtifactStore:
+        Type: S3
+        Location: !Ref CodePipelineArtifactStoreBucket
+  CodePipelineServiceRole:
+    Type: 'AWS::IAM::Role'
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - codepipeline.amazonaws.com
+            Action: 'sts:AssumeRole'
+      Path: /
+      Policies:
+        - PolicyName: AWS-CodePipeline-Service-3
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Effect: Allow
+                Action:
+                  - 'codecommit:CancelUploadArchive'
+                  - 'codecommit:GetBranch'
+                  - 'codecommit:GetCommit'
+                  - 'codecommit:GetUploadArchiveStatus'
+                  - 'codecommit:UploadArchive'
+                Resource: '*'
+              - Effect: Allow
+                Action:
+                  - 'codedeploy:CreateDeployment'
+                  - 'codedeploy:GetApplicationRevision'
+                  - 'codedeploy:GetDeployment'
+                  - 'codedeploy:GetDeploymentConfig'
+                  - 'codedeploy:RegisterApplicationRevision'
+                Resource: '*'
+              - Effect: Allow
+                Action:
+                  - 'codebuild:BatchGetBuilds'
+                  - 'codebuild:StartBuild'
+                Resource: '*'
+              - Effect: Allow
+                Action:
+                  - 'devicefarm:ListProjects'
+                  - 'devicefarm:ListDevicePools'
+                  - 'devicefarm:GetRun'
+                  - 'devicefarm:GetUpload'
+                  - 'devicefarm:CreateUpload'
+                  - 'devicefarm:ScheduleRun'
+                Resource: '*'
+              - Effect: Allow
+                Action:
+                  - 'lambda:InvokeFunction'
+                  - 'lambda:ListFunctions'
+                Resource: '*'
+              - Effect: Allow
+                Action:
+                  - 'iam:PassRole'
+                Resource: '*'
+              - Effect: Allow
+                Action:
+                  - 'elasticbeanstalk:*'
+                  - 'ec2:*'
+                  - 'elasticloadbalancing:*'
+                  - 'autoscaling:*'
+                  - 'cloudwatch:*'
+                  - 's3:*'
+                  - 'sns:*'
+                  - 'cloudformation:*'
+                  - 'rds:*'
+                  - 'sqs:*'
+                  - 'ecs:*'
+                Resource: '*'
