--- a/aws/codepipeline.yml
+++ b/aws/codepipeline.yml
@@ -54,7 +54,7 @@ Resources:
                 - ls -la target
           artifacts:
             files:
-              - target/scala-2.13/*.jar
+              - target/scala-2.12/*.jar
             discard-paths: yes
           cache:
             paths:
@@ -65,6 +65,31 @@ Resources:
       Tags:
         - Key: projectname
           Value: awsfoodagg
+  AppShellCodeBuild:
+    Type: AWS::CodeBuild::Project
+    Properties:
+      Name: myShellCodeBuildName 
+      Description: CodeBuild to build shell project
+      ServiceRole: !Ref ShellCodeBuildRole
+      Artifacts:
+        Type: CODEPIPELINE
+      Environment:
+        Type: LINUX_CONTAINER
+        ComputeType: BUILD_GENERAL1_SMALL
+        Image: aws/codebuild/java:openjdk-8
+      Source:
+        Type: CODEPIPELINE
+        BuildSpec: |
+          version: 0.2
+          phases:
+            build:
+              commands:
+                - echo "Calling Shell CodeBuild"
+                - ls -laR ${FOLDER}
+          artifacts:
+            files:
+              - '**/*'
+            base-directory: ${FOLDER}
   AppPipeline:
     Type: AWS::CodePipeline::Pipeline
     Properties:
@@ -90,6 +115,20 @@ Resources:
               RunOrder: 1
         - Name: Build
           Actions:
+            - Name: ShellBuild
+              InputArtifacts:
+                - Name: SourceOutput
+              OutputArtifacts:
+                - Name: shellbuilt    
+              ActionTypeId:
+                Category: Build
+                Owner: AWS
+                Version: 1
+                Provider: CodeBuild
+              Configuration:
+                ProjectName: !Ref AppShellCodeBuild
+                EnvironmentVariables: '[{"name": "FOLDER", "type": "PLAINTEXT", "value": "./src/main/resources/"}]' 
+              RunOrder: 1
             - Name: ScalaBuild
               InputArtifacts:
                 - Name: SourceOutput
@@ -116,8 +155,21 @@ Resources:
               Configuration:
                 Extract: True
                 BucketName: !Ref BucketNameArtifactory
-                ObjectKey: deploy
+                ObjectKey: deploy/jar
               RunOrder: 1
+            - Name: ShellDeploy
+              InputArtifacts:
+                - Name: shellbuilt
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Version: 1
+                Provider: S3
+              Configuration:
+                Extract: True
+                BucketName: !Ref BucketNameArtifactory
+                ObjectKey: deploy/shell
+              RunOrder: 1  
             - Name: InfraDeploy
               InputArtifacts:
                 - Name: SourceOutput
@@ -241,6 +293,40 @@ Resources:
                 Resource: 
                 - "arn:aws:s3:::codepipelineartifact-aws-common"
                 - "arn:aws:s3:::codepipelineartifact-aws-common/*"
+  ShellCodeBuildRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Statement:
+        - Action: ['sts:AssumeRole']
+          Effect: Allow
+          Principal:
+            Service: [codebuild.amazonaws.com]
+        Version: '2012-10-17'
+      Path: /
+      Policies:
+        - PolicyName: CodeBuildAccess
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Action:
+                - 'logs:*'
+                - 'ec2:CreateNetworkInterface'
+                - 'ec2:DescribeNetworkInterfaces'
+                - 'ec2:DeleteNetworkInterface'
+                - 'ec2:DescribeSubnets'
+                - 'ec2:DescribeSecurityGroups'
+                - 'ec2:DescribeDhcpOptions'
+                - 'ec2:DescribeVpcs'
+                - 'ec2:CreateNetworkInterfacePermission'
+                Effect: Allow
+                Resource: '*'
+              - Effect: Allow
+                Action: s3:*
+                Resource: 
+                - "arn:aws:s3:::codepipelineartifact-aws-common"
+                - "arn:aws:s3:::codepipelineartifact-aws-common/*"
+
   CloudFormationRole:
     Type: AWS::IAM::Role
     Properties:
