--- a/aws/codepipeline.yml
+++ b/aws/codepipeline.yml
@@ -11,6 +11,10 @@ Parameters:
     Description: CodeCommit repository name
     Type: String
     Default: codepipelineartifact-aws-common
+  ECRUri:
+    Description: ECR repository URI
+    Type: String
+    Default: "fao-awsfoodecr"
   StackName:
     Description: Stack name
     Type: String
@@ -65,6 +69,58 @@ Resources:
       Tags:
         - Key: projectname
           Value: awsfoodagg
+  AppDockerBuild:
+    Type: AWS::CodeBuild::Project
+    Properties:
+      Name: myDockerBuildName 
+      Description: CodeBuild to build docker project
+      ServiceRole: !Ref DockerBuildRole
+      Artifacts:
+        Type: CODEPIPELINE
+      Environment:
+        Type: LINUX_CONTAINER
+        ComputeType: BUILD_GENERAL1_SMALL
+        Image: aws/codebuild/standard:4.0
+        EnvironmentVariables:
+          - Name: ECRRepositoryURI
+            Value: !Sub "${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${ECRUri}"
+        PrivilegedMode: true
+      Source:
+        Type: CODEPIPELINE
+        BuildSpec: |
+          version: 0.2
+          phases:
+            install:
+              commands:
+                - ls -la
+                - uname -a
+            pre_build:
+              commands:
+                - echo "prebuild"
+                # - docker pull ${ECRRepositoryURI}:latest || true
+            build:
+              commands:
+                - aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 571397504118.dkr.ecr.eu-west-1.amazonaws.com
+                - docker build -t fao-awsfoodecr -f 'docker/Dockerfile' .
+                # - docker build --progress=plain -t ${ECRRepositoryURI}:latest -f 'docker/Dockerfile' .
+                - docker tag fao-awsfoodecr:latest 571397504118.dkr.ecr.eu-west-1.amazonaws.com/fao-awsfoodecr:latest
+                - docker push 571397504118.dkr.ecr.eu-west-1.amazonaws.com/fao-awsfoodecr:latest
+                # - docker image save -o image.tar ${ECRRepositoryURI}:latest
+                - ls -la 
+            post_build:
+              commands:
+                # - docker push 571397504118.dkr.ecr.eu-west-1.amazonaws.com/fao-awsfoodecr:latest
+                # - docker push ${ECRRepositoryURI}:latest
+          artifacts:
+            files:
+              - docker/Dockerfile
+          cache:
+            paths:
+              - /root/.docker-cache/**/*
+      TimeoutInMinutes: 10
+      Tags:
+        - Key: projectname
+          Value: awsfoodagg          
   AppShellCodeBuild:
     Type: AWS::CodeBuild::Project
     Properties:
@@ -142,6 +198,20 @@ Resources:
               Configuration:
                 ProjectName: !Ref AppCodeBuild   
               RunOrder: 1
+            - Name: DockerBuild
+              InputArtifacts:
+                - Name: SourceOutput
+              OutputArtifacts:
+                - Name: dockerbuilt    
+              ActionTypeId:
+                Category: Build
+                Owner: AWS
+                Version: 1
+                Provider: CodeBuild
+              Configuration:
+                ProjectName: !Ref AppDockerBuild   
+              RunOrder: 1
+
         - Name: Deploy
           Actions:
             - Name: ScalaDeploy
@@ -293,6 +363,44 @@ Resources:
                 Resource: 
                 - "arn:aws:s3:::codepipelineartifact-aws-common"
                 - "arn:aws:s3:::codepipelineartifact-aws-common/*"
+  DockerBuildRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Statement:
+        - Action: ['sts:AssumeRole']
+          Effect: Allow
+          Principal:
+            Service: [codebuild.amazonaws.com]
+        Version: '2012-10-17'
+      Path: /
+      Policies:
+        - PolicyName: CodeBuildAccess
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Action:
+                - 'logs:*'
+                - 'ec2:CreateNetworkInterface'
+                - 'ec2:DescribeNetworkInterfaces'
+                - 'ec2:DeleteNetworkInterface'
+                - 'ec2:DescribeSubnets'
+                - 'ec2:DescribeSecurityGroups'
+                - 'ec2:DescribeDhcpOptions'
+                - 'ec2:DescribeVpcs'
+                - 'ec2:CreateNetworkInterfacePermission'
+                Effect: Allow
+                Resource: '*'
+              - Action: 
+                - 'ecr:GetAuthorizationToken'
+                - 'ecr:*'
+                Effect: Allow
+                Resource: '*'
+              - Action: s3:*
+                Effect: Allow
+                Resource: 
+                - "arn:aws:s3:::codepipelineartifact-aws-common"
+                - "arn:aws:s3:::codepipelineartifact-aws-common/*"
   ShellCodeBuildRole:
     Type: AWS::IAM::Role
     Properties:
@@ -386,4 +494,9 @@ Resources:
                   - lambda:DeleteFunction
                   - lambda:UpdateFunctionCode
                 Resource: '*'
-                
+                 
+  MyRepository: 
+    Type: AWS::ECR::Repository
+    Properties: 
+      RepositoryName: "fao-awsfoodecr"
+      
